--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div id="intro" class="active">
     <button id="startBtn">
-      Tớ có điều muốn nói<br/>Nhấn vào đây đi
+      ANH có điều muốn nói ...<br/>Nhấn vào đây đi
     </button>
   </div>
 
@@ -24,7 +24,7 @@
     <div id="line"></div>
 
     <div id="final" class="final">
-      <p>Cậu đồng ý làm người yêu tớ nhaaa!!! 💖</p>
+      <p>EM đồng ý làm NGƯỜI ANH YÊU nhaaa!!! 💖</p>
       <div class="button-group">
         <button id="btnYes">Đồng ý</button>
         <button id="btnNo">Không</button>
@@ -32,7 +32,7 @@
     </div>
 
     <div id="msgYes" class="yesContent">
-      <h1>Cảm ơn cậu đã đồng ý!</h1>
+      <h1>Cảm ơn EM đã đồng ý!</h1>
       <div class="gif_container">
         <img
           src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdTFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif"
