--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div id="intro" class="active">
     <button id="startBtn">
-      ANH có điều muốn nói ...<br/>Nhấn vào đây đi
+      ANH có điều muốn nói ...<br/>EM nhấn vào đây đi 😊
     </button>
   </div>
 
@@ -24,7 +24,7 @@
     <div id="line"></div>
 
     <div id="final" class="final">
-      <p>EM đồng ý làm NGƯỜI ANH YÊU nhaaa!!! 💖</p>
+      <p>EM đồng ý làm NGƯỜI ANH YÊU nhaaa !!! 💖</p>
       <div class="button-group">
         <button id="btnYes">Đồng ý</button>
         <button id="btnNo">Không</button>
